[package]
name = "rps-server"
version = "0.1.0"
edition = "2021"
default-run = "rps-server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
warp = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = "4.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "load_test"
path = "src/bin/load_test.rs"
