[package]
name = "rps-server"
version = "0.1.0"
edition = "2021"
default-run = "rps-server"

[profile.release]
opt-level = 3
lto = "fat"           # Fat LTO for maximum optimization
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false  # Disable overflow checks in release
debug-assertions = false # Disable debug assertions
rpath = false           # Disable rpath for smaller binary

# Custom profile for maximum performance
[profile.max-perf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false

[profile.dev]
opt-level = 1
debug = true

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
warp = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
tokio-metrics = "0.3"
mimalloc = { version = "0.1", default-features = false }
ahash = "0.8"
# Ultra-performance additions
flume = "0.11"          # Ultra-fast MPSC channels
crossbeam = "0.8"       # Lock-free data structures
rayon = "1.8"           # Data parallelism
smallvec = "1.11"       # Stack-allocated vectors
bytes = "1.5"           # Efficient byte handling
simd-json = "0.13"      # SIMD-accelerated JSON
bumpalo = "3.14"        # Bump allocator for temporary data
once_cell = "1.19"      # Lazy static initialization
pin-project-lite = "0.2" # Zero-cost async projections

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "load_test"
path = "src/bin/load_test.rs"

[[bin]]
name = "extreme_load_test"
path = "src/bin/extreme_load_test.rs"
